--- a/docs/06_automatic_handling_of_super_computer_jobs_with_python.ipynb
+++ b/docs/06_automatic_handling_of_super_computer_jobs_with_python.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
     "\n",
     "def submit_job(folder: pt.Path, remote_destination: pt.Path, manager_dict: dict):\n",
     "\n",
-    "    client   = ag.remote.Client(config.host, config.username, config.password)\n",
+    "    client   = Client(config.host, config.username, config.password)\n",
     "\n",
     "    client.copy_local_to_remote(folder, remote_destination)\n",
     "\n",
@@ -151,11 +151,9 @@
     "        f\"cd {(remote_destination/folder.name).as_posix()}; dos2unix openfoam_job.sh\"\n",
     "    )\n",
     "    # submit the job\n",
-    "\n",
     "    _, stdout, _ = client.ssh.exec_command(\n",
     "        f\"cd {(remote_destination/folder.name).as_posix()}; qsub openfoam_job.sh\"\n",
     "    )\n",
-    "\n",
     "    # keep track job id\n",
     "    output = stdout.read().decode(\"utf-8\")\n",
     "    job_id = output.split(\".\")[0]\n",
@@ -169,7 +167,7 @@
     "\n",
     "def download_job(remote_folder: pt.Path, local_destination: pt.Path):\n",
     "\n",
-    "    client = ag.remote.Client(config.host, config.username, config.password)\n",
+    "    client = Client(config.host, config.username, config.password)\n",
     "    client.logger.info(f\"{remote_folder.name} has finished running\")\n",
     "    client.copy_remote_to_local(remote_folder, local_destination)\n",
     "    client.delete_remote_directory(remote_folder)\n",
@@ -193,7 +191,7 @@
     "local_main_folder  = pt.Path(\"../scripts/generate_steady_foam_cases/foam_cases\")\n",
     "remote_main_folder = pt.Path(\"/scratch/m45/cm5094/projects/bifurcation_steady_state\")\n",
     "\n",
-    "client = ag.remote.Client(config.host, config.username, config.password)\n",
+    "client = Client(config.host, config.username, config.password)\n",
     "\n",
     "# get a list of all the cases in our job folder\n",
     "all_cases     = list(local_main_folder.glob(\"*\"))\n",
@@ -214,10 +212,11 @@
     "\n",
     "    # for each running job check whether they are complete and copy them back to the local system\n",
     "    for job_id in list(running_cases.keys()):\n",
-    "        _, stdout, _  = client.ssh.exec_command(f\"qstat {job_id}\")\n",
-    "        parsed_stdout = stdout.read().decode(\"utf-8\")\n",
-    "        if len(parsed_stdout) == 0:\n",
-    "            remote_folder = running_cases[job_id]\n",
+    "        remote_folder = running_cases[job_id]\n",
+    "        # the file which submits the job should create a dummy file called completed.tmp hits is so that we do not overload the pbs server, by running a lot of qstats\n",
+    "        _, stdout, _  = client.ssh.exec_command(\"cd %s; FILE=completed.tmp; [ -e \\\"./$FILE\\\" ] && echo 1 || echo 0\"%remote_folder.as_posix())\n",
+    "        parsed_stdout = bool(int(stdout.read().decode(\"utf-8\")))\n",
+    "        if parsed_stdout:\n",
     "            # download the job\n",
     "            p             = mp.Process(\n",
     "                target=download_job, args=(remote_folder, local_main_folder))\n",
