--- a/docs/02_convert_step_to_openfoam_with_pointwise_python_api.ipynb
+++ b/docs/02_convert_step_to_openfoam_with_pointwise_python_api.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "source": [
-    "# Create the Boundary Conditions and Saving the OpenFoam PolyMesh\n",
+    "# Create the Boundary Conditions, Resizing the Mesh and Saving the OpenFoam PolyMesh\n",
     "\n",
     "After generating the mesh we can now assign the boundary conditions and convert it into OpenFoam PolyMesh format"
    ],
@@ -387,6 +387,15 @@
     "outlet_2_bc = pw.BoundaryCondition.create()\n",
     "outlet_2_bc.setName(\"OUTLET-2\")\n",
     "outlet_2_bc.setPhysicalType(\"-usage\", \"CAE\", \"patch\")\n",
+    "\n",
+    "# ensure scale the model to ensure that the model size is in mm\n",
+    "with pw.Application.begin(\"Modify\", [block]) as modifier:\n",
+    "    scaling  = Transform.scaling((0.001, 0.001, 0.001), anchor=(0,0,0))\n",
+    "    entities = modifier.getEntities()\n",
+    "    col      = pw.Collection()\n",
+    "    col.set(entities)\n",
+    "    pw.Entity.transform(scaling, col.list())\n",
+    "\n",
     "\n",
     "# assign the correct domains to the boundary conditions\n",
     "\n",
