--- a/docs/06_automatic_handling_of_super_computer_jobs_with_python.ipynb
+++ b/docs/06_automatic_handling_of_super_computer_jobs_with_python.ipynb
@@ -216,7 +216,7 @@
     "        # the file which submits the job should create a dummy file called completed.tmp hits is so that we do not overload the pbs server, by running a lot of qstats\n",
     "        _, stdout, _  = client.ssh.exec_command(\"cd %s; FILE=completed.tmp; [ -e \\\"./$FILE\\\" ] && echo 1 || echo 0\"%remote_folder.as_posix())\n",
     "        parsed_stdout = bool(int(stdout.read().decode(\"utf-8\")))\n",
-    "        if parsed_stdout:\n",
+    "        if parsed_stdout:i\n",
     "            # download the job\n",
     "            p             = mp.Process(\n",
     "                target=download_job, args=(remote_folder, local_main_folder))\n",
