--- a/docs/no_bifurcation/00_creating_a_statistical_shape_model.ipynb
+++ b/docs/no_bifurcation/00_creating_a_statistical_shape_model.ipynb
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save the shape\n",
+    "# save the shape for use in the next notebook\n",
     "import numpy as np\n",
     "np.save(\"shape\", shape)"
    ]
