--- a/docs/no_bifurcation/01_creating_structured_meshes_in_pointwise.ipynb
+++ b/docs/no_bifurcation/01_creating_structured_meshes_in_pointwise.ipynb
@@ -40,8 +40,8 @@
     "import matplotlib\n",
     "from pymethods.algorithms.transfinite_interpolation import Transfinite2d\n",
     "%matplotlib widget\n",
-    "# Load surface points\n",
-    "shape = np.load(\"shape.npy\")"
+    "# Load surface points generated from our statistical shape model\n",
+    "shape = np.load(\"shape.npy\")/1000"
    ]
   },
   {
@@ -84,9 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5.921354280977886e-06\n"
+     ]
+    },
     {
      "output_type": "display_data",
      "data": {
@@ -94,7 +101,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "83dec3a48997468bb22dab3c12d60d83"
+       "model_id": "e345b9c996c744c1a9061fcc8bfe6b1b"
       }
      },
      "metadata": {}
@@ -211,6 +218,13 @@
    ]
   },
   {
+   "source": [
+    "Bellow is a utility function for plotting the boundary edges"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -252,7 +266,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ac2e4043bee8466595b5a593cece8922"
+       "model_id": "f49d7cb5e523450e97e12f638472334a"
       }
      },
      "metadata": {}
@@ -268,6 +282,13 @@
     "\n",
     "plt.equal_aspect_3d()"
    ]
+  },
+  {
+   "source": [
+    "Finally we can create the meshes programatically in pointwise"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -292,12 +313,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pointwise import GlyphClient\n",
-    "glf = GlyphClient(port=2807)\n",
+    "# glf = GlyphClient(port=2807)\n",
+    "glf = GlyphClient(port=0)\n",
     "# pointwise api\n",
     "pw = glf.get_glyphapi()\n",
     "# reset the client\n",
@@ -321,6 +343,7 @@
     "\n",
     "def create_outer_blocks(ids):\n",
     "    domains = []\n",
+    "    # keep track of the domains on the inlet, outlet and walls to make setting the bc easier\n",
     "    inlet_patch = pw.DomainStructured.createFromConnectors(\n",
     "            [\n",
     "                inner_inlet_connectors[ids[0]],\n",
@@ -330,7 +353,6 @@
     "            ]\n",
     "        )\n",
     "\n",
-    "\n",
     "    outlet_patch = pw.DomainStructured.createFromConnectors(\n",
     "            [\n",
     "                inner_outlet_connectors[ids[0]],\n",
@@ -339,8 +361,6 @@
     "                outlet_inner_outer_connectors[ids[1][1]]\n",
     "            ]\n",
     "        )\n",
-    "\n",
-    "\n",
     "    wall_patch = pw.DomainStructured.createFromConnectors(\n",
     "            [\n",
     "                outer_inlet_connectors[ids[0]],\n",
@@ -349,7 +369,6 @@
     "                outer_block_connectors[ids[2][1]],\n",
     "            ]\n",
     "    )\n",
-    "\n",
     "    domains.extend(\n",
     "        pw.DomainStructured.createFromConnectors(\n",
     "            [\n",
@@ -399,7 +418,7 @@
     "outlet_domains.extend(inner_outlet_domain)\n",
     "all_domains.extend(inner_inlet_domain)  \n",
     "all_domains.extend(inner_outlet_domain)\n",
-    "# create the domains for the outer blocks\n",
+    "# create the domains for the outer blocks using the connectors, which which we know the order of already\n",
     "connector_ids = [\n",
     "    [0, (0, 1), (0, 2)], [1, (1, 3), (2, 3)], [2, (2, 3), (1, 3)], [3, (0, 2), (0, 1)]\n",
     "]\n",
@@ -428,44 +447,21 @@
     "outlet_bc.setName(\"OUTLET\")\n",
     "outlet_bc.setPhysicalType(\"-usage\", \"CAE\", \"patch\")\n",
     "\n",
-    "'''\n",
-    "# we can obtain the necessary pairs of blocks and domains by checking pointwise\n",
+    "inlet_bc.apply([\n",
+    "    (pw.Block.getBlocksFromDomains(domain)[0], domain) for domain in inlet_domains\n",
+    "])\n",
     "\n",
-    "$_TMP(PW_3) apply [list [list $_BL(3) $_DM(6)] [list $_BL(1) $_DM(1)] [list $_BL(2) $_DM(3)] [list $_BL(4) $_DM(9)] [list $_BL(5) $_DM(12)]]\n",
-    "pw::Application markUndoLevel {Set BC}\n",
+    "outlet_bc.apply([\n",
+    "    (pw.Block.getBlocksFromDomains(domain)[0], domain) for domain in outlet_domains\n",
+    "])\n",
     "\n",
-    "$_TMP(PW_2) apply [list [list $_BL(3) $_DM(8)] [list $_BL(5) $_DM(14)] [list $_BL(2) $_DM(5)] [list $_BL(4) $_DM(11)]]\n",
-    "pw::Application markUndoLevel {Set BC}\n",
-    "\n",
-    "$_TMP(PW_4) apply [list [list $_BL(2) $_DM(4)]* [list $_BL(4) $_DM(10)] [list $_BL(3) $_DM(7)] [list $_BL(5) $_DM(13)] [list $_BL(1) $_DM(2)]]\n",
-    "'''\n",
-    "# now apply the boundary conditions\n",
-    "inlet_block_domain_pairs = [\n",
-    "    (\"blk-1\", \"dom-9\"), (\"blk-5\", \"dom-1\"), (\"blk-2\", \"dom-3\"), (\"blk-3\", \"dom-14\"), (\"blk-4\", \"dom-19\")\n",
-    "]\n",
-    "inlet_bc.apply(\n",
-    "    [(pw.GridEntity.getByName(blk), pw.GridEntity.getByName(dom)) for (blk, dom) in inlet_block_domain_pairs]   \n",
-    ")\n",
-    "\n",
-    "outlet_block_domain_pairs = [\n",
-    "    (\"blk-2\", \"dom-4\"), (\"blk-3\", \"dom-15\"), (\"blk-1\", \"dom-10\"), (\"blk-4\", \"dom-20\"), (\"blk-5\", \"dom-2\")\n",
-    "]\n",
-    "outlet_bc.apply(\n",
-    "    [(pw.GridEntity.getByName(blk), pw.GridEntity.getByName(dom)) for (blk, dom) in outlet_block_domain_pairs]   \n",
-    ")\n",
-    "\n",
-    "wall_block_domain_pairs = [\n",
-    "    (\"blk-1\", \"dom-11\"), (\"blk-4\", \"dom-21\"), (\"blk-2\", \"dom-5\"), (\"blk-3\", \"dom-16\")\n",
-    "]\n",
-    "wall_bc.apply(\n",
-    "    [(pw.GridEntity.getByName(blk), pw.GridEntity.getByName(dom)) for (blk, dom) in wall_block_domain_pairs]   \n",
-    ")\n",
-    "\n",
-    "import pathlib as pt\n",
-    "\n",
-    "save_folder = pt.Path(\"./test_foam/constant/polyMesh\")\n",
+    "wall_bc.apply([\n",
+    "    (pw.Block.getBlocksFromDomains(domain)[0], domain) for domain in wall_domains\n",
+    "])\n",
     "\n",
     "# now save the mesh\n",
+    "import pathlib as pt\n",
+    "save_folder = pt.Path(\"./test_foam/constant/polyMesh\")\n",
     "with pw.Application.begin(\"CaeExport\") as cae_exporter:\n",
     "    cae_exporter.addAllEntities()\n",
     "    cae_exporter.initialize(\n",
